overlapping elements in tablet version fixing

--- a/styles.css
+++ b/styles.css
@@ -275,10 +275,10 @@ body {
     text-align: center;
 }
 
-@media (max-width: 767.89px) {
+@media (max-width: 768px) {
     .about__heading {
-        max-width: 300px;
-        margin: -12px auto 53px auto;
+        max-width: 500px;
+        margin: -12px auto 47gipx auto;
     }
 }
 
@@ -295,6 +295,12 @@ body {
     margin-bottom: 32px;
 }
 
+@media (max-width:768px){
+    .h2--bottom-offset{
+        margin-bottom: 39px;
+        margin-top: -10px;
+    }
+}
 .h2--light {
     color: #fff;
 }
@@ -453,14 +459,14 @@ body {
     height: auto;
 }
 
-@media(max-width: 695px) {
+@media(max-width: 768px) {
     .promo__pic {
         width: 100%;
-        height: 256px;
+        max-height: 256px;
     }
 
     .promo__pic--gap {
-        margin-bottom: 20px;
+        margin-bottom: 28px;
         width: 100%;
     }
 }
@@ -492,9 +498,10 @@ body {
     background-color: #eee;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 768px) {
     .info__item--narrow {
-        width: 50%;
+        width: 33%;
+        padding: 22px 53px 33px;
     }
 }
 
